<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">Noteapp Proto</string>
    <string name="title_activity_small_steps">items list</string>
     <string name="title_activity_todo_list">todos list</string>
    <string name="title_activity_small_steps_portal">roots list</string>
    <string name="action_settings">Settings</string>
    <string name="to_small_steps">Start</string>
    <string name="table_title_task">Title</string>
    <string name="table_title_deadline">Date</string>
    <string name="table_title_status">Status</string>
    <string name="button_open_short">Insert next</string>
    <string name="button_close_short">Cancel</string>
    <string name="button_save_short">Save</string>
    <string name="button_delete_short">Delete</string>
    <string name="button_show_detail_short">See children</string>
    <string name="button_add_detail_short">Add children</string>
    <string name="button_accept">Yes</string>
    <string name="button_deny">No</string>
    <string name="create_goal">Create new root</string>
    <string name="delete_goal">Remove root</string>
    <string name="goals_listed">Roots list</string>
    <string name="export_data">Export data</string>
    <string name="data_export_succeeded">Export successfully completed.</string>
    <string name="data_export_failed">Failed to export.</string>
    <string name="confirm_to_delete_goal">Do you really want to remove this root?</string>
    <string name="confirm_to_delete_task">This item has children. Do you really want to remove this item?\nChidren are not removed.</string>

</resources>
